--- a/templates/example.html
+++ b/templates/example.html
@@ -12,12 +12,11 @@
   <body>
     <!-- 햄버거 버튼 -->
     <button class="hamburger" id="sidebarToggle" aria-expanded="false" onclick="openSidebar()">
-      <span></span><span></span><span></span>
+      <input type="image" src="../static/hamburger.png" id="jonghobabo">
     </button>
 
     <!-- 사이드바 -->
     <div class="sidebar" id="sidebar">
-      <button class="close-btn" onclick="closeSidebar()"></button>
       <h2>단<span class="accent">어</span>장 by <span class="accent">;</span></h2>
       <hr class="divider" />
       <div class="menu-stack">
