--- a/templates/example.html
+++ b/templates/example.html
@@ -6,7 +6,7 @@
     <title>영어 수행 연습 - 예문</title>
 
     <!-- 경로/엔드포인트 이름은 네 앱에 맞게 사용 -->
-    <link rel="icon" href="{{ url_for('static', filename='images/favicon.png') }}">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.png') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/example.css') }}">
   </head>
   <body>
