--- a/templates/odap.html
+++ b/templates/odap.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+<button id="show-today-btn" class="today-btn" type="button" aria-pressed="false" title="오늘 오답만 보기">오늘 오답</button>
 
 <form action="main_page">
     <button class="odapbtn" type="submit">나가기</button>  
